// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Mapping Templates should fail if template is missing 1`] = `"Cannot read properties of undefined (reading 'Error')"`;

exports[`Mapping Templates should substitute variables 1`] = `
{
  "Fn::Join": [
    "",
    [
      "Foo: ",
      {
        "Fn::Sub": [
          "\${foo}",
          {
            "foo": "bar",
          },
        ],
      },
      ", Var: ",
      {
        "Fn::Sub": [
          "\${var}",
          {
            "var": {
              "Ref": "MyReference",
            },
          },
        ],
      },
      ", Context: \${ctx.args.id}, Unknonw: \${unknown}",
    ],
  ],
}
`;

exports[`Mapping Templates should substitute variables and use defaults 1`] = `
{
  "Fn::Join": [
    "",
    [
      "Foo: ",
      {
        "Fn::Sub": [
          "\${foo}",
          {
            "foo": "fuzz",
          },
        ],
      },
      ", Var: ",
      {
        "Fn::Sub": [
          "\${var}",
          {
            "var": "bizz",
          },
        ],
      },
    ],
  ],
}
`;
